// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`rule deprecated should contain documentation 1`] = `
{
  "description": "The \`<center>\` element is deprecated and should not be used in new code.",
  "url": "https://html-validate.org/rules/deprecated.html",
}
`;

exports[`rule deprecated should contain documentation 2`] = `
{
  "description": "The \`<blink>\` element is deprecated in HTML 5 and should not be used in new code.",
  "url": "https://html-validate.org/rules/deprecated.html",
}
`;

exports[`rule deprecated should contain documentation 3`] = `
{
  "description": "The \`<blink>\` element is deprecated in HTML 4.1 and should not be used in new code.",
  "url": "https://html-validate.org/rules/deprecated.html",
}
`;

exports[`rule deprecated should contain documentation 4`] = `
{
  "description": "The \`<blink>\` element is deprecated and should not be used in new code.

extra documentation for <blink>",
  "url": "https://html-validate.org/rules/deprecated.html",
}
`;
